test_regress/t/t_bitsel_wire_array_bad.out
%Error: t/t_bitsel_wire_array_bad.v:21:16: Illegal assignment of constant to unpacked array
                                         : ... In instance t
   21 |    assign b = a[0];   
      |                ^
%Error: Exiting due to
